force-app/main/default/objects/BMCServiceDesk__SRM_ProcessControl__c/BMCServiceDesk__SRM_ProcessControl__c.object-meta.xml
<CustomObject>
    <description>Stores the conditions that are used to invoke the processes defined for the service request definition.</description>
    <label>Process Control</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Process Control #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>