force-app/main/default/objects/BMCServiceDesk__SRM_ProcessControl__c/fields/BMCServiceDesk__FKProcessTemplate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProcessTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process</label>
    <referenceTo>BMCServiceDesk__SRM_ProcessTemplate__c</referenceTo>
    <relationshipName>Fulfillment_Conditional_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>