force-app/main/default/objects/BMCServiceDesk__SRM_ProcessControl__c/fields/BMCServiceDesk__InputValues__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InputValues__c</fullName>
    <label>Input Values</label>
    <type>TextArea</type>
</CustomField>