force-app/main/default/objects/BMCServiceDesk__SRM_ProcessControl__c/fields/BMCServiceDesk__StoredValues__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__StoredValues__c</fullName>
    <label>Stored Values</label>
    <type>TextArea</type>
</CustomField>